feat: add boilerplate
